Fixwoocommerce/woocommerce-admin#1768 Added a Margin of 40 pixel for better user interface, on mobile devices. (https://github.com/woocommerce/woocommerce-admin/pull/1842)
* Added a Margin of 40 pixel for better user interface, on mobile devices.

* applied suggestion and commited changes for all devices.

* applied suggestion and removed extra tab.

--- a/plugins/woocommerce-admin/client/analytics/settings/index.scss
+++ b/plugins/woocommerce-admin/client/analytics/settings/index.scss
@@ -7,6 +7,8 @@
 }
 
 .woocommerce-settings__actions {
+	margin-bottom: $gap-largest;
+	
 	@include breakpoint( '>1280px' ) {
 		margin-left: 15%;
 	}
